--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -112,11 +112,11 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "e390e5fb-5671-4230-b5f5-5cf75afc7fd1",
-    "Id": "adc9ccff-787a-45ca-9df1-9b680a2707bc",
+    "Id": "7c8c0ae7-4b6d-4a63-9063-857502062927",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
-    "Name": "SAOEMS Copy",
+    "Name": "SAOEMS%2BCopy.msapp",
     "OriginatingVersion": "1.296",
     "ParserErrorCount": 1,
     "ShowStatusBar": false
