Fixed some navigation

--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -134,7 +134,7 @@
   },
   "ScreenOrder": [
     "LoginPage",
-    "LoginPage_1",
+    "LoginPage_old",
     "HomePage",
     "View Events",
     "View APF",
