--- a/SAO-EP/Src/HomePage.fx.yaml
+++ b/SAO-EP/Src/HomePage.fx.yaml
@@ -35,7 +35,7 @@ HomePage As screen:
                     {
                         MenuText: "Logout",
                         MenuIcon: Icon.Leave,
-                        ScreenToGoTo: LoginPage
+                        ScreenToGoTo: LoginPage_old
                     }
                 )
             ),
@@ -57,7 +57,7 @@ HomePage As screen:
                     {
                         MenuText: "Logout",
                         MenuIcon: Icon.Leave,
-                        ScreenToGoTo: LoginPage
+                        ScreenToGoTo: LoginPage_old
                     }
                 )
             ),
@@ -88,7 +88,7 @@ HomePage As screen:
                     {
                         MenuText: "Logout",
                         MenuIcon: Icon.Leave,
-                        ScreenToGoTo: LoginPage
+                        ScreenToGoTo: LoginPage_old
                     }
                 )
             )
@@ -126,7 +126,7 @@ HomePage As screen:
         BtnViewLoE_1 As button:
             Fill: =RGBA(24, 32, 82, 1)
             Height: =62
-            OnSelect: =Navigate(Reports)
+            OnSelect: =Navigate(Reports_1)
             Text: ="View Reports"
             Width: =398
             X: =95
