--- a/SAO-EP/Src/Components/Loading Screen_1.fx.yaml
+++ b/SAO-EP/Src/Components/Loading Screen_1.fx.yaml
@@ -7,6 +7,7 @@
     ZIndex: =1
 
     Rectangle6_2 As rectangle:
+        Fill: =RGBA(39, 58, 133, 1)
         Height: =351
         Width: =640
         ZIndex: =1
